# ovtsa

./: .gitmodules  CMakeLists.txt  run.bat
data/: default.xml  full.xml  quick.xml  scene02.xml  scene03.xml  scene04.xml  scene05.xml  scene06.xml  scene07.xml  scene08.xml  scene09.xml
source/: CMakeLists.txt  adaptator.cpp  adaptator.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  factory.hpp  intersection.hpp  light.cpp  light.hpp  light_directional.cpp  light_directional.hpp  light_factory.cpp  light_factory.hpp  light_point.cpp  light_point.hpp  light_spot.cpp  light_spot.hpp  main.cpp  main.hpp  material.cpp  material.hpp  object.cpp  object.hpp  object_factory.cpp  object_factory.hpp  parser.cpp  parser.hpp  perlin.cpp  perlin.hpp  ray.hpp  shape.hpp  shape_cylinder.cpp  shape_cylinder.hpp  shape_plane.cpp  shape_plane.hpp  shape_polyhedron.cpp  shape_polyhedron.hpp  shape_sphere.cpp  (+9 more)
